# Codes

./: .gitignore  Cs50  Cs50.c  README.md  Test  Test.c  Test2.c  a.out  t  t.c  test2  test3  test3.c  testing.py
C/: a.out  divisors.c  exp  exp.c  hello.c  node  node.c  rock-paper-scissor.c  string.c  t  t.c  test  test.c  test3  test3.c
C#/: Lab 1.xlsx  Program.cs
C++/: animation  animation.cpp  battleship  battleship.cpp  battleship_refined.cpp  every  every.c++  hello  hello.cpp  math_q  math_q.cpp  opengltest  opengltest.cpp  sdltest  sdltest.cpp  sdltut  sdltut.cpp  snake  snake.cpp  tic_tac_toe  tic_tac_toe.cpp  ttt  ttt.cpp
C++/snake_game/: snake  snake.cpp  test  test.cpp
C++/some other thing/: some_other_thing  some_other_thing.cpp  test  test.cpp
C/deque/: linkedList.c  main.c
C/leetcode/: Contains Duplicate.c  Crawler Log Folder.c  Length of Last Word.c  Plus One.c  Search Insert Position.c
C/triangle/: Makefile  main.c
Cs50.dSYM/Contents/: Info.plist
Lua/: main.lua  string.lua
Python/: cs50.ipynb  graph.py  hello.ipynb  helloworld.py  pg.py  phonebook.csv  snake.py  somefile.txt  testing.py
Python/leetcode/: main.py
Python/linear/: functions.py  main.py  matrix.py  vector.py
Python/manim/: Makefile  main.py
Python/msg-bot/: main.py
Rust/pdf-parser/: .gitignore  Cargo.toml
Rust/pdf-parser/assets/: all_classes.json  text.txt
Rust/pdf-parser/src/: lib.rs  main.rs
Web/: hello.ts  tutorial.css  tutorial.html  tutorial2.html  tutorial3.html  twine.css  twine.html  twine.js
Web/a/: index.html  (+1 more)
sql/: main.py  test.session.sql
(+215 files in other folders)
