[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.2.0"
lopdf = "0.32.0"
regex = "1.10.4"
serde = {version = "1.0.115", features = ["derive"] } # "1.0.197"}
serde_json = "1.0.115"
tokio = "1.37.0"
